--- a/AllToAll/Makefile
+++ b/AllToAll/Makefile
@@ -1,3 +1,4 @@
+CC=mpiifort
 all: def  # run
 
 def: allv
@@ -7,10 +8,10 @@ run: mytest
 	mpirun -np 3 ./mytest
 
 mytest: mytest.f90
-	mpifort mytest.f90 -o mytest
+	$(CC) mytest.f90 -o mytest
 
 allv: allv.f90
-	mpifort allv.f90 -o allv
+	$(CC) allv.f90 -o allv
 
 clean:
 	rm -rf allv mytest
