renaming chl structure into sat and adapting consequently the code and the namelist :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,11 +21,11 @@ set(PHYSOBS bar_mod.f90 bar_mod_ad.f90 div_dmp.f90 div_dmp_ad.f90 get_byg.f90 ge
           mod_trj_tl.f90 mod_trj_ad.f90  get_vel_ad.f90 get_vel.f90  
           invrt.f90 invrt_ad.f90 )
 set(OBJS routines.f def_nml.f90 def_grd.f90 sav_itr.f90 ini_itr.f90 ini_bmd.f90 rdgrds.f90 rdeofs.f90 
-         netcdf_err.f90 get_obs.f90get_obs_chl.f90 
+         netcdf_err.f90 get_obs.f90get_obs_sat.f90 
          int_par.f90 obs_vec.f90 def_cov.f90 ini_cfn.f90
          ini_nrm.f90 min_cfn.f90 costf.f90 cnv_ctv.f90 ver_hor.f90 rcfl_x.f90 rcfl_y.f90 veof.f90 
-         obsop.f90 obs_chl.f90 resid.f90 res_inc.f90 rdrcorr.f90 mean_rdr.f90     
-         obs_trd_ad.f90 obs_chl_ad.f90 veof_ad.f90 ver_hor_ad.f90 rcfl_x_ad.f90 rcfl_y_ad.f90 
+         obsop.f90 obs_sat.f90 resid.f90 res_inc.f90 rdrcorr.f90 mean_rdr.f90     
+         obs_trd_ad.f90 obs_sat_ad.f90 veof_ad.f90 ver_hor_ad.f90 rcfl_x_ad.f90 rcfl_y_ad.f90 
          cnv_ctv_ad.f90 cnv_inn.f90 wrt_dia.f90 filename_mod.f90 oceanvar.f90 main.f90)
 # SOURCES --END--
 
